--- a/app/Views/pages/login.twig
+++ b/app/Views/pages/login.twig
@@ -3,7 +3,6 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ base_path }}/public/css/app.css">
-    <link rel="stylesheet" type="text/css" href="{{ base_path }}/public/css/login.css" id="bootstrap-css">
 {% endblock %}
 
 {% block content %}
@@ -27,50 +26,49 @@
             </div>
         {% endfor %}
     {% endif %}
-    <div>
-        <div id="loginbox" style="margin-top:50px;"
-             class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <div class="panel-title">Se connecter</div>
+    <div class="card mt-3 ml-auto mr-auto" style="max-width: 32rem; min-width: 25rem;">
+        <div class="card-header text-white bg-dark">
+            Se connecter
+        </div>
+        <div class="card-body">
+            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+            <form id="loginform" class="form-horizontal" role="form" method="post" action="{{ path_for("sendLogin") }}" >
+                <div class="mb-3">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" id="login-username" name="username" placeholder="Pseudo ou email" required>
+                        <div class="invalid-feedback" style="width: 100%;">
+                            Identifiant requis.
+                        </div>
+                    </div>
                 </div>
-
-                <div style="padding-top:30px" class="panel-body">
-
-                    <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-
-                    <form id="loginform" class="form-horizontal" role="form" method="post" action="{{ path_for("sendLogin") }}" >
-                        <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                            <input id="login-username" type="text" class="form-control" name="username" value=""
-                                   placeholder="adresse email">
+                <div class="mb-3">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-lock"></i></span>
                         </div>
-
-                        <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="fas fa-lock"></i></span>
-                            <input id="login-password" type="password" class="form-control" name="password"
-                                   placeholder="mot de passe">
+                        <input type="password" class="form-control" id="login-password" name="password" placeholder="Mot de Passe" required>
+                        <div class="invalid-feedback" style="width: 100%;">
+                            Mot de Passe requis.
                         </div>
-
-                        <div style="margin-top:10px" class="form-group">
-                            <div class="col-sm-12 controls">
-                                <a id="btn-login" href="#" class="btn btn-success">Se connecter </a>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-md-12 control">
-                                <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-                                    Vous n'avez pas encore de compte?
-                                    <a href="{{ path_for("inscription") }}">
-                                        Créer un compte
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <div class="col-md-12 control">
+                        <button class="btn btn-success btn-block" type="submit">Se connecter</button>
+                        <div style="font-size:85%">
+                            Vous n'avez pas encore de compte?
+                            <a href="{{ path_for("inscriptionPage") }}">
+                                Créer un compte
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
+
+
 {% endblock %}
