--- a/app/Views/pages/register.twig
+++ b/app/Views/pages/register.twig
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-12 control">
-                        <button class="btn btn-success btn-block" type="submit">Se connecter</button>
+                        <button class="btn btn-success btn-block" type="submit">S'inscrire</button>
                         <small class="form-text text-muted">
                             Vous avez déjà un compte ? <a href="{{ path_for("inscriptionPage") }}">Je me connecte</a>
                         </small>
