--- a/app/Views/pages/account.twig
+++ b/app/Views/pages/account.twig
@@ -1,2 +1,66 @@
 {% extends "layout.twig" %}
 {% block title 'Mon compte' %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/public/css/app.css">
+    <link href="{{ base_path }}/public/css/strap.css" rel="stylesheet" id="bootstrap-css">
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
+                <a href="edit.html">Modifier Profile</a>
+                <a href="{{ path_for('logout') }}">Se deconnecter</a>
+                <br>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">
+
+
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Sheena Shrestha</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-3 col-lg-3 " align="center"><img alt="User Pic"
+                                                                                src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png"
+                                                                                class="img-circle img-responsive"></div>
+
+                            <div class=" col-md-9 col-lg-9 ">
+                                <table class="table table-user-information">
+                                    <tbody>
+                                    <tr>
+                                        <td>Nom:</td>
+                                        <td>Programming</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Prénom:</td>
+                                        <td>06/23/2013</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Email</td>
+                                        <td><a href="mailto:info@support.com">info@support.com</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Pseudo</td>
+                                        <td>Female</td>
+                                    </tr>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer">
+                        <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button"
+                           class="btn btn-sm btn-warning"><i style="color: whitesmoke" class="fas fa-edit"></i></a>
+                        <a data-original-title="Remove this user" data-toggle="tooltip" type="button"
+                           class="btn btn-sm btn-danger"><i style="color: whitesmoke" class="fas fa-times"></i></i></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
