--- a/app/Views/pages/account.twig
+++ b/app/Views/pages/account.twig
@@ -3,7 +3,6 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ base_path }}/public/css/app.css">
-    <link href="{{ base_path }}/public/css/strap.css" rel="stylesheet" id="bootstrap-css">
 {% endblock %}
 
 {% block content %}
@@ -19,7 +18,7 @@
 
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Sheena Shrestha</h3>
+                        <h3 class="panel-title">{{ session.user.nom }} {{ session.user.prenom }}</h3>
                     </div>
                     <div class="panel-body">
                         <div class="row">
@@ -31,20 +30,20 @@
                                 <table class="table table-user-information">
                                     <tbody>
                                     <tr>
-                                        <td>Nom:</td>
-                                        <td>Programming</td>
+                                        <td>Nom</td>
+                                        <td>{{ session.user.nom }}</td>
                                     </tr>
                                     <tr>
-                                        <td>Prénom:</td>
-                                        <td>06/23/2013</td>
+                                        <td>Prénom</td>
+                                        <td>{{ session.user.prenom }}</td>
                                     </tr>
                                     <tr>
                                         <td>Email</td>
-                                        <td><a href="mailto:info@support.com">info@support.com</a></td>
+                                        <td><a href="mailto:{{ session.user.mail }}">{{ session.user.mail }}</a></td>
                                     </tr>
                                     <tr>
                                         <td>Pseudo</td>
-                                        <td>Female</td>
+                                        <td>{{ session.user.login }}</td>
                                     </tr>
                                     </tr>
                                     </tbody>
@@ -53,10 +52,11 @@
                         </div>
                     </div>
                     <div class="panel-footer">
-                        <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button"
-                           class="btn btn-sm btn-warning"><i style="color: whitesmoke" class="fas fa-edit"></i></a>
-                        <a data-original-title="Remove this user" data-toggle="tooltip" type="button"
-                           class="btn btn-sm btn-danger"><i style="color: whitesmoke" class="fas fa-times"></i></i></a>
+                        <form method="POST"
+                              action="{{ path_for('manageAccount', {'id': session.user.id }) }}">
+                            <button type="submit" name="action" value="edit" class="btn btn-sm btn-warning"><i style="color: whitesmoke" class="fas fa-edit"></i></button>
+                            <button type="submit" name="action" value="delete" class="btn btn-sm btn-danger"><i style="color: whitesmoke" class="fas fa-times"></i></button>
+                        </form>
                     </div>
 
                 </div>
