fix supp account

--- a/app/Views/pages/creators.twig
+++ b/app/Views/pages/creators.twig
@@ -13,7 +13,7 @@
             <table class="table text-center table-bordered table-hover">
                 <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Créateur(s) publique</th>
+                    <th scope="col">Créateur(s) publique actif</th>
                 </tr>
                 </thead>
                 <tbody>
