--- a/app/Views/pages/listeAdmin.twig
+++ b/app/Views/pages/listeAdmin.twig
@@ -104,7 +104,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="inputImg">Image</label>
-                                    <input class="form-control" type="text" name="img">
+                                    <input class="form-control" type="text" name="img" value="{{ item.img }}">
                                 </div>
                                 <div class="form-group">
                                     <label for="inputTarif">Tarif*</label>
@@ -127,7 +127,7 @@
                     <a data-toggle="modal" data-target="#modification{{ item.id }}">
                         <div id="itemListed" class="card my-3">
                             <div class="card-body">
-                                <img src="{{ item.img }}" width="70" height="70"
+                                <img src="{{ base_path }}/public/img/{{ item.img }}" width="70" height="70"
                                      class="rounded-top"
                                      alt="{{ item.img }}">
                                 <span style="font-size: 22px; margin-left: 1em;">{{ item.nom }}</span>
@@ -162,7 +162,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="inputImg">Image</label>
-                                            <input class="form-control" type="text" name="img">
+                                            <input class="form-control" type="text" name="img" value="{{ item.img }}">
                                         </div>
                                         <div class="form-group">
                                             <label for="inputUrl">Lien externe</label>
