--- a/app/Views/pages/register.twig
+++ b/app/Views/pages/register.twig
@@ -31,12 +31,13 @@
             Inscription
         </div>
         <div class="card-body">
-            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-            <form id="registerform" class="form-horizontal" role="form" method="post" action="{{ path_for("sendInscription") }}" >
+            <form id="registerform" class="form-horizontal" role="form" method="post"
+                  action="{{ path_for("sendInscription") }}">
                 <div class="mb-3">
                     <div class="form-group">
                         <label for="register-email">Email</label>
-                        <input type="email" class="form-control" id="register-email" name="email" placeholder="Adresse Email" required>
+                        <input type="email" class="form-control" id="register-email" name="email"
+                               placeholder="Adresse Email" required>
                         <div class="invalid-feedback" style="width: 100%;">
                             Adresse email valide requis.
                         </div>
@@ -45,7 +46,8 @@
                 <div class="mb-3">
                     <div class="form-group">
                         <label for="register-pseudo">Pseudo</label>
-                        <input type="text" class="form-control" id="register-pseudo" name="pseudo" placeholder="Pseudo" required>
+                        <input type="text" class="form-control" id="register-pseudo" name="pseudo" placeholder="Pseudo"
+                               required>
                         <div class="invalid-feedback" style="width: 100%;">
                             Pseudo requis.
                         </div>
@@ -54,7 +56,8 @@
                 <div class="mb-3">
                     <div class="form-group">
                         <label for="register-prenom">Prénom</label>
-                        <input type="text" class="form-control" id="register-prenom" name="prenom" placeholder="Prénom" required>
+                        <input type="text" class="form-control" id="register-prenom" name="prenom" placeholder="Prénom"
+                               required>
                         <div class="invalid-feedback" style="width: 100%;">
                             Prénom requis.
                         </div>
@@ -72,7 +75,8 @@
                 <div class="mb-3">
                     <div class="form-group">
                         <label for="register-password">Mot de passe</label>
-                        <input type="password" class="form-control" id="register-password" name="password" placeholder="Mot de Passe" required>
+                        <input type="password" class="form-control" id="register-password" name="password"
+                               placeholder="Mot de Passe" required>
                         <div class="invalid-feedback" style="width: 100%;">
                             Mot de passe requis.
                         </div>
@@ -81,7 +85,8 @@
                 <div class="mb-3">
                     <div class="form-group">
                         <label for="register-password">Confirmer le Mot de passe</label>
-                        <input type="password" class="form-control" id="register-password" name="passwordconfirm" placeholder="Mot de Passe" required>
+                        <input type="password" class="form-control" id="register-password" name="passwordconfirm"
+                               placeholder="Mot de Passe" required>
                         <div class="invalid-feedback" style="width: 100%;">
                             Mot de passe requis.
                         </div>
