--- a/app/Views/pages/liste.twig
+++ b/app/Views/pages/liste.twig
@@ -68,7 +68,11 @@
         {% for item in items %}
             <div class="p-2 bd-highlight">
                 <div class="card" style="width: 18rem">
-                    <img src="{{ item.img }}" class="card-img-top rounded-top" alt="{{ item.img }}">
+                    {% if isUrl(item.img) == false %}
+                        <img src="{{ base_path }}/public/img/{{ item.img }}" class="card-img-top rounded-top" alt="{{ item.img }}">
+                    {% else %}
+                       <img src="{{ item.img }}" class="card-img-top rounded-top" alt="{{ item.img }}">
+                    {% endif %}
                     <div class="card-body text-center">
                         <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong>
                         </h5>
